--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,11 @@
 name: fasdf
 description: asdf helper for symlinking versions defined in .tool-versions in your local project
-version: 0.0.1
-# repository: https://github.com/my_org/my_repo
+version: 0.0.2
+repository: https://github.com/exaby73/fasdf
 
 environment:
   sdk: ^3.8.0
 
-# Add regular dependencies here.
 dependencies:
   args: ^2.5.0
   freezed_annotation: ^3.0.0
@@ -19,3 +18,6 @@ dev_dependencies:
   json_serializable: ^6.9.5
   lints: ^5.0.0
   test: ^1.24.0
+
+executables:
+  fasdf:
